added system around better movement

--- a/todo
+++ b/todo
@@ -23,7 +23,7 @@ TODO:
     * make levels?
     * need assets, so need to work on it.
     * sound effects
-
+    * UI, fonts and stuff
 
 
 - REMEBER TO PUBLISH IN THE END!
